[gd_scene load_steps=57 format=2]

[ext_resource path="res://Scenes/Foes/Esqueleto/Esqueleto.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Components/SpriteAnimatedController.tscn" type="PackedScene" id=2]
[ext_resource path="res://Art/Foes/Skeleton/Idle/Idle1.png" type="Texture" id=3]
[ext_resource path="res://Art/Foes/Skeleton/Idle/Idle2.png" type="Texture" id=4]
[ext_resource path="res://Art/Foes/Skeleton/Idle/Idle3.png" type="Texture" id=5]
[ext_resource path="res://Art/Foes/Skeleton/Idle/Idle4.png" type="Texture" id=6]
[ext_resource path="res://Art/Foes/Skeleton/Idle/Idle5.png" type="Texture" id=7]
[ext_resource path="res://Art/Foes/Skeleton/Idle/Idle6.png" type="Texture" id=8]
[ext_resource path="res://Art/Foes/Skeleton/Idle/Idle7.png" type="Texture" id=9]
[ext_resource path="res://Art/Foes/Skeleton/Idle/Idle8.png" type="Texture" id=10]
[ext_resource path="res://Art/Foes/Skeleton/Idle/Idle9.png" type="Texture" id=11]
[ext_resource path="res://Art/Foes/Skeleton/Idle/Idle11.png" type="Texture" id=12]
[ext_resource path="res://Art/Foes/Skeleton/Ataque/Ataque1.png" type="Texture" id=13]
[ext_resource path="res://Art/Foes/Skeleton/Ataque/Ataque2.png" type="Texture" id=14]
[ext_resource path="res://Art/Foes/Skeleton/Ataque/Ataque3.png" type="Texture" id=15]
[ext_resource path="res://Art/Foes/Skeleton/Ataque/Ataque4.png" type="Texture" id=16]
[ext_resource path="res://Art/Foes/Skeleton/Ataque/Ataque5.png" type="Texture" id=17]
[ext_resource path="res://Art/Foes/Skeleton/Ataque/Ataque6.png" type="Texture" id=18]
[ext_resource path="res://Art/Foes/Skeleton/Ataque/Ataque7.png" type="Texture" id=19]
[ext_resource path="res://Art/Foes/Skeleton/Ataque/Ataque8.png" type="Texture" id=20]
[ext_resource path="res://Art/Foes/Skeleton/Ataque/Ataque9.png" type="Texture" id=21]
[ext_resource path="res://Art/Foes/Skeleton/Ataque/Ataque10.png" type="Texture" id=22]
[ext_resource path="res://Art/Foes/Skeleton/Ataque/Ataque11.png" type="Texture" id=23]
[ext_resource path="res://Art/Foes/Skeleton/Ataque/Ataque12.png" type="Texture" id=24]
[ext_resource path="res://Art/Foes/Skeleton/Ataque/Ataque13.png" type="Texture" id=25]
[ext_resource path="res://Art/Foes/Skeleton/Ataque/Ataque15.png" type="Texture" id=26]
[ext_resource path="res://Art/Foes/Skeleton/Muerte/Muerte1.png" type="Texture" id=27]
[ext_resource path="res://Art/Foes/Skeleton/Muerte/Muerte2.png" type="Texture" id=28]
[ext_resource path="res://Art/Foes/Skeleton/Muerte/Muerte3.png" type="Texture" id=29]
[ext_resource path="res://Art/Foes/Skeleton/Caminando/Caminando1.png" type="Texture" id=30]
[ext_resource path="res://Art/Foes/Skeleton/Caminando/Caminando2.png" type="Texture" id=31]
[ext_resource path="res://Art/Foes/Skeleton/Caminando/Caminando3.png" type="Texture" id=32]
[ext_resource path="res://Art/Foes/Skeleton/Caminando/Caminando4.png" type="Texture" id=33]
[ext_resource path="res://Art/Foes/Skeleton/Caminando/Caminando5.png" type="Texture" id=34]
[ext_resource path="res://Art/Foes/Skeleton/Caminando/Caminando6.png" type="Texture" id=35]
[ext_resource path="res://Art/Foes/Skeleton/Caminando/Caminando7.png" type="Texture" id=36]
[ext_resource path="res://Art/Foes/Skeleton/Caminando/Caminando8.png" type="Texture" id=37]
[ext_resource path="res://Art/Foes/Skeleton/Caminando/Caminando9.png" type="Texture" id=38]
[ext_resource path="res://Art/Foes/Skeleton/Caminando/Caminando10.png" type="Texture" id=39]
[ext_resource path="res://Art/Foes/Skeleton/Caminando/Caminando11.png" type="Texture" id=40]
[ext_resource path="res://Art/Foes/Skeleton/Caminando/Caminando12.png" type="Texture" id=41]
[ext_resource path="res://Art/Foes/Skeleton/Caminando/Caminando13.png" type="Texture" id=42]
[ext_resource path="res://Art/Foes/Skeleton/Caminando/Caminando14.png" type="Texture" id=43]
[ext_resource path="res://Art/Foes/Skeleton/Muerte/Muerte4.png" type="Texture" id=44]
[ext_resource path="res://Art/Foes/Skeleton/Muerte/Muerte5.png" type="Texture" id=45]
[ext_resource path="res://Art/Foes/Skeleton/Muerte/Muerte6.png" type="Texture" id=46]
[ext_resource path="res://Art/Foes/Skeleton/Muerte/Muerte7.png" type="Texture" id=47]
[ext_resource path="res://Art/Foes/Skeleton/Muerte/Muerte8.png" type="Texture" id=48]
[ext_resource path="res://Art/Foes/Skeleton/Muerte/Muerte9.png" type="Texture" id=49]
[ext_resource path="res://Art/Foes/Skeleton/Muerte/Muerte10.png" type="Texture" id=50]
[ext_resource path="res://Art/Foes/Skeleton/Muerte/Muerte11.png" type="Texture" id=51]
[ext_resource path="res://Art/Foes/Skeleton/Muerte/Muerte12.png" type="Texture" id=52]
[ext_resource path="res://Scenes/Components/CharacterController.tscn" type="PackedScene" id=53]
[ext_resource path="res://Scenes/Components/Life.tscn" type="PackedScene" id=54]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 2.79832
height = 15.8602

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "Normal",
"speed": 9.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ) ],
"loop": false,
"name": "Ataque",
"speed": 8.0
}, {
"frames": [ ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 27 ) ],
"loop": false,
"name": "Golpeado",
"speed": 8.0
}, {
"frames": [ ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ) ],
"loop": true,
"name": "Caminando",
"speed": 9.0
}, {
"frames": [ ExtResource( 27 ), ExtResource( 29 ), ExtResource( 28 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ) ],
"loop": false,
"name": "Muerte",
"speed": 8.0
} ]
_sections_unfolded = [ "Resource" ]

[node name="EnemyEsqueleto" type="KinematicBody2D"]

scale = Vector2( 2, 2 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

position = Vector2( 3.68225, 4.33043 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="SpriteAnimatedController" parent="." index="1" instance=ExtResource( 2 )]

[node name="AnimatedSprite" type="AnimatedSprite" parent="SpriteAnimatedController" index="0"]

frames = SubResource( 2 )
animation = "Normal"
frame = 5
playing = true
flip_h = true
_sections_unfolded = [ "Transform" ]

[node name="rayAtaqueDer" type="RayCast2D" parent="." index="2"]

position = Vector2( 3, 0 )
scale = Vector2( 1, 10 )
enabled = true
exclude_parent = true
cast_to = Vector2( 15, 0 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="rayAtaqueIzq" type="RayCast2D" parent="." index="3"]

position = Vector2( -3, 0 )
scale = Vector2( 1, 10 )
enabled = true
exclude_parent = true
cast_to = Vector2( -15, 0 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="SeguidorDer" type="RayCast2D" parent="." index="4"]

enabled = true
exclude_parent = true
cast_to = Vector2( 100, 0 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="SeguidorIzq" type="RayCast2D" parent="." index="5"]

enabled = true
exclude_parent = true
cast_to = Vector2( -100, 0 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="CharacterController" parent="." index="6" instance=ExtResource( 53 )]

velocidadMovimiento = 2.0
gravedad = 8.0

[node name="Life" parent="." index="7" instance=ExtResource( 54 )]

vida = 3


